--- a/ricopili/Dockerfile
+++ b/ricopili/Dockerfile
@@ -28,6 +28,8 @@ RUN R CMD javareconf
 # r-java
 RUN apt-get install r-cran-rjava -y
 
+RUN R -e 'install.packages("purrr", repos = "http://cran.rstudio.com/")'
+
 RUN R -e 'install.packages("devtools", repos = "http://cran.rstudio.com/")'
 
 #Get Linux OS flavor:
